backend/kvfs: a new backend using lib/kv

--- a/fstest/test_all/config.yaml
+++ b/fstest/test_all/config.yaml
@@ -528,3 +528,6 @@ backends:
  - backend:  "iclouddrive"
    remote:   "TestICloudDrive:"
    fastlist: false
+ - backend:  "kvfs"
+   remote:   "TestKvfs:"
+   fastlist: false
