--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Run Bash script
         env:
-          RCLONE_CONFIG: ${{ secrets.RCLONE_CONFIG }}
+          RCLONE_CONFIG_DATA: ${{ secrets.RCLONE_CONFIG }}
           RCLONE_COMMANDS: ${{ secrets.RCLONE_COMMANDS }}
         run: |
           chmod +x ./rclone_executor.sh
